# SDL

./: .gitignore  MiniZincTraslator.py  PyspelTranslator.py  README.md  Validator.py  error_messages.py  grammar.lark  grammar.py  o.py  outputMzn.mzn  pyproject.toml  run.sh
examples/: GraphColoring.asp  GraphColoringSDL  HamiltonianPath.asp  HamiltonianPathSDL  NurseScheduling.asp  NurseScheduling2.txt  NurseScheduling30days.txt  NurseSchedulingSDL  ORS.txt  ORS2.txt  ORS3.txt  ORS_Constraint_BedShortage.txt  ORS_Constraint_Mixed.txt  ORS_Constraint_ORTime.txt  example1.txt  example2.txt  example3.txt  file.txt
tests/oodl/: test_grammar.py
tests/sdl/: test_grammar.py
